force-app/main/default/objects/et4ae5__abTest__c/fields/et4ae5__abInstanceId__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__abInstanceId__c</fullName>
    <label>AB Instance Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>