force-app/main/default/objects/et4ae5__abTest__c/fields/et4ae5__Custom_Object__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Custom_Object__c</fullName>
    <label>Custom Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>