force-app/main/default/objects/et4ae5__abTest__c/fields/et4ae5__Test_Type__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Test_Type__c</fullName>
    <label>Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subject lines</fullName>
            </value>
            <value>
                <fullName>Emails</fullName>
            </value>
            <value>
                <fullName>Content areas</fullName>
            </value>
            <value>
                <fullName>From names</fullName>
            </value>
            <value>
                <fullName>Send dates/times</fullName>
            </value>
            <value>
                <fullName>Preheaders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>