force-app/main/default/objects/et4ae5__abTest__c/listViews/et4ae5__All.listView-meta.xml
<ListView>
    <fullName>et4ae5__All</fullName>
    <columns>NAME</columns>
    <columns>et4ae5__abInstanceId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>